Revert "Yet another change of method of determining height in attempt to fix issue on mobile devices"
This reverts commit fae8a12b4d991afa021825f9cebace0026505c92.

--- a/_sass/theme/_layout.scss
+++ b/_sass/theme/_layout.scss
@@ -24,7 +24,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: calc(100%);
+  height: 100%;
+  min-height: 100%;
 }
 
 /**
@@ -168,8 +169,6 @@
 }
 
 .footer {
-  position: fixed;
-  bottom: 0;
   padding: 4px;
   color: $grey-color--dark;
   font-size: 0.7em;
